--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "babel": "^6.23.0",
     "chai": "^4.2.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.11.5",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/register": "^7.8.6",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/user-event": "^7.1.2",
     "chai": "^4.2.0",
     "mocha": "^8.1.1",
-    "mochawesome": "^6.1.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/user-event": "^7.1.2"
+    "mochawesome": "^6.1.1"
   },
   "babel": {
     "plugins": [
