--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "@testing-library/jest-dom": "^4.2.4",
+    "axios": "^0.21.0",
     "babel": "^6.23.0",
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.1.2",
+    "process": "^0.11.10",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
@@ -19,9 +23,17 @@
     "@babel/register": "^7.8.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "mocha": "^8.1.1",
-    "mochawesome": "^6.1.1"
+    "mochawesome": "^6.1.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsdoc": "^30.5.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-unused-imports": "^0.1.2"
   },
   "babel": {
     "plugins": [
@@ -55,5 +67,103 @@
     ],
     "require": "@babel/register",
     "exit": true
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "mocha": true,
+      "es6": true
+    },
+    "parser": "babel-eslint",
+    "plugins": [
+      "unused-imports",
+      "simple-import-sort",
+      "jsdoc"
+    ],
+    "extends": [
+      "plugin:prettier/recommended",
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings"
+    ],
+    "rules": {
+      "arrow-body-style": [
+        "error",
+        "as-needed"
+      ],
+      "jsdoc/require-param-type": "error",
+      "jsdoc/require-param": "error",
+      "no-control-regex": "off",
+      "no-var": "error",
+      "prefer-const": "error",
+      "prettier/prettier": [
+        "error",
+        {
+          "tabWidth": 4,
+          "arrowParens": "avoid",
+          "printWidth": 120,
+          "bracketSpacing": false
+        }
+      ],
+      "sort-imports": "off",
+      "import/order": "off",
+      "simple-import-sort/sort": [
+        "error",
+        {
+          "groups": [
+            [
+              "^\\u0000",
+              "^@?\\w",
+              "^[^.]",
+              "^\\."
+            ]
+          ]
+        }
+      ],
+      "arrow-parens": [
+        "error",
+        "as-needed"
+      ],
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "semi-style": [
+        "error",
+        "last"
+      ],
+      "no-unused-vars": "off",
+      "unused-imports/no-unused-imports": 2,
+      "unused-imports/no-unused-vars": 2,
+      "padded-blocks": [
+        "error",
+        "never"
+      ]
+    },
+    "overrides": [
+      {
+        "files": [
+          "src/boundedContext/**/*.js",
+          "src/infrastructure/**/*.js"
+        ],
+        "rules": {
+          "no-restricted-imports": [
+            "error",
+            {
+              "patterns": [
+                "**/application/*",
+                "**/infrastructure/*",
+                "**/boundedContext/*",
+                "!**/core/*"
+              ]
+            }
+          ]
+        }
+      }
+    ]
   }
 }
